Fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -314,7 +314,7 @@ img.headhshot-small-screen {
 #case-studies {
     background-color: #1e293b;
     padding: 1rem;
-    padding-top: 5rem;
+    padding-top: 2rem;
 }
 /* View Case Study Button Start */
 .case-study-button-container {
